@@ -1,5 +1,9 @@
 2007-08-24  Helmut Eller  <heller@common-lisp.net>
 
+	* slime-highlight-edits.el: New file.
+
+2007-08-24  Helmut Eller  <heller@common-lisp.net>
+
 	* slime-scratch.el: New file.
 
 2007-08-23  Helmut Eller  <heller@common-lisp.net>
